2008-08-21  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor.mdp: set referenced gtk sharp version back to 2.8.
	* Mono.TextEditor/CodeSegmentPreviewWindow.cs: fixed compiler warning.

2008-08-21  Mike Krüger <mkrueger@novell.com> 

	* TangoLightStyle.xml, JavascriptSyntaxMode.xml, Styles,
	  Styles/TangoLightStyle.xml, Styles/OblivionStyle.xml,
	  Styles/BrownStyle.xml, Styles/VisualStudioStyle.xml,
	  Styles/C64Style.xml, VBNetSyntaxMode.xml, BooSyntaxMode.xml,
	  CSharpSyntaxMode.xml, PythonSyntaxMode.xml, JavaSyntaxMode.xml,
	  CPPSyntaxMode.xml, CSyntaxMode.xml, ValaSyntaxMode.xml,
	  OblivionStyle.xml, ChangeLogSyntaxMode.xml, AspNetSyntaxMode.xml,
	  gtk-gui/objects.xml, BrownStyle.xml, XmlSyntaxMode.xml,
	  VisualStudioStyle.xml, C64Style.xml, SyntaxModes,
	  SyntaxModes/JavascriptSyntaxMode.xml,
	  SyntaxModes/ChangeLogSyntaxMode.xml,
	  SyntaxModes/AspNetSyntaxMode.xml, SyntaxModes/VBNetSyntaxMode.xml,
	  SyntaxModes/BooSyntaxMode.xml, SyntaxModes/CSharpSyntaxMode.xml,
	  SyntaxModes/XmlSyntaxMode.xml, SyntaxModes/JavaSyntaxMode.xml,
	  SyntaxModes/PythonSyntaxMode.xml, SyntaxModes/CPPSyntaxMode.xml,
	  SyntaxModes/CSyntaxMode.xml, SyntaxModes/ValaSyntaxMode.xml: Moved
	  resources to own subdirecttories.
	* Mono.TextEditor/TextViewMargin.cs: Fixed little issue with folding
	  markers and invalid lines.

2008-08-20  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/Document.cs, Mono.TextEditor/TextEditor.cs,
	  Mono.TextEditor/LineSegment.cs: Changed text editor interface
	  (add/remove marker moved to document).

2008-08-19  Lluis Sanchez Gual <lluis@novell.com> 

	* Mono.TextEditor/TextEditor.cs: Fix some memory leaks.
	* gtk-gui/objects.xml: Updated.

2008-08-16  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor.Highlighting/Style.cs,
	  Mono.TextEditor.Highlighting/IColorDefinition.cs: Worked on styles
	  (fixed 'Bug 405939 - Named colours in colour schemes should have
	  fallbacks').

2008-08-16  Mike Krüger <mkrueger@novell.com> 
